--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,18 @@
 <head></head>
 <body>
 <p>
-THE SECRET NUMBER IS <%= number %>
+<% if message == "You got it right!" %>
+  <%= message %>
+  <%= "THE SECRET NUMBER IS #{number}" %>
+<% else %>
+  <%= message %>
+<% end %>
+</p>
+<p>
+<form>
+<input type='text' name='guess' />
+<input type='submit' value='Guess!' />
+</form>
 </p>
 </body>
 </html>
